--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,14 +25,14 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">35.1 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">41.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; failed</th></tr>
-<tr class="failedodd"><td>checkbox.CheckBoxTests</td><td><a href="#m1"><b>testCheckBoxes</b>  </a></td><td class="numi">1</td><td>1587660315806</td><td class="numi">3</td></tr>
+<tr class="failedodd"><td>checkbox.CheckBoxTests</td><td><a href="#m1"><b>testCheckBoxes</b>  </a></td><td class="numi">1</td><td>1587661771763</td><td class="numi">1</td></tr>
 <tr><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="3">tests.Tests</td><td><a href="#m2"><b>testSuccessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587660321679</td><td class="numi">3434</td></tr><tr class="passedodd"><td><a href="#m3"><b>testUnssucessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587660331596</td><td class="numi">2787</td></tr><tr class="passedodd"><td><a href="#m4"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1587660340190</td><td class="numi">4140</td></tr>
+<tr class="passedodd"><td rowspan="4">tests.Tests</td><td><a href="#m2"><b>testSuccessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587661777956</td><td class="numi">2804</td></tr><tr class="passedodd"><td><a href="#m3"><b>testInvalidUsername</b>  </a></td><td class="numi">1</td><td>1587661786611</td><td class="numi">2319</td></tr><tr class="passedodd"><td><a href="#m4"><b>testInvalidPassword</b>  </a></td><td class="numi">1</td><td>1587661794902</td><td class="numi">3782</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1587661804591</td><td class="numi">2256</td></tr>
 </table>
 <h1>D:/Personale/TestAutomation/Internet_herokuapp</h1>
 <h2 id="m1">checkbox.CheckBoxTests:testCheckBoxes</h2>
@@ -69,10 +69,12 @@ td,th {border:1px solid #009;padding:.25em .5em}
 </div>
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">tests.Tests:testSuccessfullyLogin</h2>
+<h2 id="m2">tests.Tests:validrateImages</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">tests.Tests:validrateImages</h2>
+<h2 id="m3">tests.Tests:testSuccessfullyLogin</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">tests.Tests:testUnssucessfullyLogin</h2>
+<h2 id="m4">tests.Tests:testInvalidUsername</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m5">tests.Tests:testInvalidPassword</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
