--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,56 +25,24 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">4</td><td class="numi">4</td><td class="numi">0</td><td class="numi_attn">1</td><td class="numi">41.8 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">6</td><td class="numi">6</td><td class="numi">0</td><td class="numi">0</td><td class="numi">46.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; failed</th></tr>
-<tr class="failedodd"><td>checkbox.CheckBoxTests</td><td><a href="#m1"><b>testCheckBoxes</b>  </a></td><td class="numi">1</td><td>1587661771763</td><td class="numi">1</td></tr>
-<tr><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="4">tests.Tests</td><td><a href="#m2"><b>testSuccessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587661777956</td><td class="numi">2804</td></tr><tr class="passedodd"><td><a href="#m3"><b>testInvalidUsername</b>  </a></td><td class="numi">1</td><td>1587661786611</td><td class="numi">2319</td></tr><tr class="passedodd"><td><a href="#m4"><b>testInvalidPassword</b>  </a></td><td class="numi">1</td><td>1587661794902</td><td class="numi">3782</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1587661804591</td><td class="numi">2256</td></tr>
+<tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
+<tr class="passedodd"><td rowspan="6">tests.Tests</td><td><a href="#m1"><b>testSuccessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587821507160</td><td class="numi">3425</td></tr><tr class="passedodd"><td><a href="#m2"><b>testInvalidUsername</b>  </a></td><td class="numi">1</td><td>1587821515779</td><td class="numi">2298</td></tr><tr class="passedodd"><td><a href="#m3"><b>testInvalidPassword</b>  </a></td><td class="numi">1</td><td>1587821523329</td><td class="numi">2208</td></tr><tr class="passedodd"><td><a href="#m4"><b>testEmptyForm</b>  </a></td><td class="numi">1</td><td>1587821530711</td><td class="numi">2314</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1587821538331</td><td class="numi">2329</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckboxes</b>  </a></td><td class="numi">1</td><td>1587821545869</td><td class="numi">1541</td></tr>
 </table>
 <h1>D:/Personale/TestAutomation/Internet_herokuapp</h1>
-<h2 id="m1">checkbox.CheckBoxTests:testCheckBoxes</h2>
-<div>
-<div class="stacktrace">java.lang.NullPointerException
-	at checkbox.CheckBoxTests.testCheckBoxes(CheckBoxTests.java:17)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.base/java.lang.reflect.Method.invoke(Method.java:564)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:134)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:597)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:173)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:816)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:146)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.base/java.util.ArrayList.forEach(ArrayList.java:1510)
-	at org.testng.TestRunner.privateRun(TestRunner.java:766)
-	at org.testng.TestRunner.run(TestRunner.java:587)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:384)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:378)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:337)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:286)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1187)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1109)
-	at org.testng.TestNG.runSuites(TestNG.java:1039)
-	at org.testng.TestNG.run(TestNG.java:1007)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:110)
-</div>
-</div>
+<h2 id="m1">tests.Tests:testInvalidPassword</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">tests.Tests:validrateImages</h2>
+<h2 id="m2">tests.Tests:testCheckboxes</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">tests.Tests:testSuccessfullyLogin</h2>
+<h2 id="m3">tests.Tests:testInvalidUsername</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">tests.Tests:testInvalidUsername</h2>
+<h2 id="m4">tests.Tests:validrateImages</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">tests.Tests:testInvalidPassword</h2>
+<h2 id="m5">tests.Tests:testSuccessfullyLogin</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m6">tests.Tests:testEmptyForm</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
