--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,24 +25,53 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">6</td><td class="numi">6</td><td class="numi">0</td><td class="numi">0</td><td class="numi">46.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi">0</td><td class="numi">58.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="6">tests.Tests</td><td><a href="#m1"><b>testSuccessfullyLogin</b>  </a></td><td class="numi">1</td><td>1587821507160</td><td class="numi">3425</td></tr><tr class="passedodd"><td><a href="#m2"><b>testInvalidUsername</b>  </a></td><td class="numi">1</td><td>1587821515779</td><td class="numi">2298</td></tr><tr class="passedodd"><td><a href="#m3"><b>testInvalidPassword</b>  </a></td><td class="numi">1</td><td>1587821523329</td><td class="numi">2208</td></tr><tr class="passedodd"><td><a href="#m4"><b>testEmptyForm</b>  </a></td><td class="numi">1</td><td>1587821530711</td><td class="numi">2314</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1587821538331</td><td class="numi">2329</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckboxes</b>  </a></td><td class="numi">1</td><td>1587821545869</td><td class="numi">1541</td></tr>
+<tr class="passedodd"><td rowspan="7">tests.Tests</td><td><a href="#m1"><b>SuccessfulLogin</b>  </a></td><td class="numi">1</td><td>1588179068279</td><td class="numi">3256</td></tr><tr class="passedodd"><td><a href="#m2"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m3"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m4"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1588179102535</td><td class="numi">2514</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588179110892</td><td class="numi">1770</td></tr><tr class="passedodd"><td><a href="#m7"><b>testUncheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588179118541</td><td class="numi">1448</td></tr>
 </table>
 <h1>D:/Personale/TestAutomation/Internet_herokuapp</h1>
-<h2 id="m1">tests.Tests:testInvalidPassword</h2>
+<h2 id="m1">tests.Tests:UnsuccessfulLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>sprancenatuc@yahoo.com</td>
+<td>SuperSecretPassword!</td>
+<td>Your username is invalid!</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">tests.Tests:testCheckboxes</h2>
+<h2 id="m2">tests.Tests:SuccessfulLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
+<tr class="param stripe"><td>tomsmith</td>
+<td>SuperSecretPassword!</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">tests.Tests:testInvalidUsername</h2>
+<h2 id="m3">tests.Tests:UnsuccessfulLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td></td>
+<td></td>
+<td>Your username is invalid!</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">tests.Tests:validrateImages</h2>
+<h2 id="m4">tests.Tests:testCheckCheckboxes</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">tests.Tests:testSuccessfullyLogin</h2>
+<h2 id="m5">tests.Tests:validrateImages</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">tests.Tests:testEmptyForm</h2>
+<h2 id="m6">tests.Tests:testUncheckCheckboxes</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m7">tests.Tests:UnsuccessfulLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
+<tr class="param stripe"><td>tomsmith</td>
+<td>12345</td>
+<td>Your password is invalid!</td>
+</tr>
+</table>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
