--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,15 +25,23 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">7</td><td class="numi">7</td><td class="numi">0</td><td class="numi">0</td><td class="numi">58.3 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">66.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="7">tests.Tests</td><td><a href="#m1"><b>SuccessfulLogin</b>  </a></td><td class="numi">1</td><td>1588179068279</td><td class="numi">3256</td></tr><tr class="passedodd"><td><a href="#m2"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m3"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m4"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588179077368</td><td class="numi">19333</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1588179102535</td><td class="numi">2514</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588179110892</td><td class="numi">1770</td></tr><tr class="passedodd"><td><a href="#m7"><b>testUncheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588179118541</td><td class="numi">1448</td></tr>
+<tr class="passedodd"><td rowspan="8">tests.Tests</td><td><a href="#m1"><b>SuccessfulLogin</b>  </a></td><td class="numi">1</td><td>1588542072746</td><td class="numi">3216</td></tr><tr class="passedodd"><td><a href="#m2"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m3"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m4"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1588542106723</td><td class="numi">2303</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588542114865</td><td class="numi">1445</td></tr><tr class="passedodd"><td><a href="#m7"><b>testUncheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588542122108</td><td class="numi">1799</td></tr><tr class="passedodd"><td><a href="#m8"><b>testAlerts</b>  </a></td><td class="numi">1</td><td>1588542129703</td><td class="numi">2587</td></tr>
 </table>
 <h1>D:/Personale/TestAutomation/Internet_herokuapp</h1>
-<h2 id="m1">tests.Tests:UnsuccessfulLogin</h2>
+<h2 id="m1">tests.Tests:SuccessfulLogin</h2>
+<table cellspacing="0" cellpadding="0" class="result">
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
+<tr class="param stripe"><td>tomsmith</td>
+<td>SuperSecretPassword!</td>
+</tr>
+</table>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m2">tests.Tests:UnsuccessfulLogin</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td>sprancenatuc@yahoo.com</td>
@@ -42,15 +50,20 @@ td,th {border:1px solid #009;padding:.25em .5em}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">tests.Tests:SuccessfulLogin</h2>
+<h2 id="m3">tests.Tests:testUncheckCheckboxes</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m4">tests.Tests:testCheckCheckboxes</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m5">tests.Tests:UnsuccessfulLogin</h2>
 <table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th></tr>
+<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td>tomsmith</td>
-<td>SuperSecretPassword!</td>
+<td>12345</td>
+<td>Your password is invalid!</td>
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m3">tests.Tests:UnsuccessfulLogin</h2>
+<h2 id="m6">tests.Tests:UnsuccessfulLogin</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td></td>
@@ -59,19 +72,8 @@ td,th {border:1px solid #009;padding:.25em .5em}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">tests.Tests:testCheckCheckboxes</h2>
+<h2 id="m7">tests.Tests:testAlerts</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">tests.Tests:validrateImages</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">tests.Tests:testUncheckCheckboxes</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">tests.Tests:UnsuccessfulLogin</h2>
-<table cellspacing="0" cellpadding="0" class="result">
-<tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
-<tr class="param stripe"><td>tomsmith</td>
-<td>12345</td>
-<td>Your password is invalid!</td>
-</tr>
-</table>
+<h2 id="m8">tests.Tests:validrateImages</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
