--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -25,12 +25,12 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <body>
 <table cellspacing="0" cellpadding="0" class="testOverview">
 <tr><th>Test</th><th>Methods<br/>Passed</th><th>Scenarios<br/>Passed</th><th># skipped</th><th># failed</th><th>Total<br/>Time</th><th>Included<br/>Groups</th><th>Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">8</td><td class="numi">8</td><td class="numi">0</td><td class="numi">0</td><td class="numi">66.2 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em"><a href="#t1">D:/Personale/TestAutomation/Internet_herokuapp</a></td><td class="numi">9</td><td class="numi">9</td><td class="numi">0</td><td class="numi">0</td><td class="numi">73.0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">D:/Personale/TestAutomation/Internet_herokuapp &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="8">tests.Tests</td><td><a href="#m1"><b>SuccessfulLogin</b>  </a></td><td class="numi">1</td><td>1588542072746</td><td class="numi">3216</td></tr><tr class="passedodd"><td><a href="#m2"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m3"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m4"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588542081753</td><td class="numi">19084</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1588542106723</td><td class="numi">2303</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588542114865</td><td class="numi">1445</td></tr><tr class="passedodd"><td><a href="#m7"><b>testUncheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588542122108</td><td class="numi">1799</td></tr><tr class="passedodd"><td><a href="#m8"><b>testAlerts</b>  </a></td><td class="numi">1</td><td>1588542129703</td><td class="numi">2587</td></tr>
+<tr class="passedodd"><td rowspan="9">tests.Tests</td><td><a href="#m1"><b>SuccessfulLogin</b>  </a></td><td class="numi">1</td><td>1588883353192</td><td class="numi">2835</td></tr><tr class="passedodd"><td><a href="#m2"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588883361987</td><td class="numi">18864</td></tr><tr class="passedodd"><td><a href="#m3"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588883361987</td><td class="numi">18864</td></tr><tr class="passedodd"><td><a href="#m4"><b>UnsuccessfulLogin</b>  </a></td><td class="numi">3</td><td>1588883361987</td><td class="numi">18864</td></tr><tr class="passedodd"><td><a href="#m5"><b>validrateImages</b>  </a></td><td class="numi">1</td><td>1588883386706</td><td class="numi">2245</td></tr><tr class="passedodd"><td><a href="#m6"><b>testCheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588883395443</td><td class="numi">1431</td></tr><tr class="passedodd"><td><a href="#m7"><b>testUncheckCheckboxes</b>  </a></td><td class="numi">1</td><td>1588883402758</td><td class="numi">1398</td></tr><tr class="passedodd"><td><a href="#m8"><b>testAlerts</b>  </a></td><td class="numi">1</td><td>1588883410045</td><td class="numi">2573</td></tr><tr class="passedodd"><td><a href="#m9"><b>testiFrame</b>  </a></td><td class="numi">1</td><td>1588883418532</td><td class="numi">911</td></tr>
 </table>
 <h1>D:/Personale/TestAutomation/Internet_herokuapp</h1>
 <h2 id="m1">tests.Tests:SuccessfulLogin</h2>
@@ -54,7 +54,9 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m4">tests.Tests:testCheckCheckboxes</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m5">tests.Tests:UnsuccessfulLogin</h2>
+<h2 id="m5">tests.Tests:testiFrame</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m6">tests.Tests:UnsuccessfulLogin</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td>tomsmith</td>
@@ -63,7 +65,11 @@ td,th {border:1px solid #009;padding:.25em .5em}
 </tr>
 </table>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">tests.Tests:UnsuccessfulLogin</h2>
+<h2 id="m7">tests.Tests:testAlerts</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m8">tests.Tests:validrateImages</h2>
+<p class="totop"><a href="#summary">back to summary</a></p>
+<h2 id="m9">tests.Tests:UnsuccessfulLogin</h2>
 <table cellspacing="0" cellpadding="0" class="result">
 <tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr>
 <tr class="param stripe"><td></td>
@@ -71,9 +77,5 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <td>Your username is invalid!</td>
 </tr>
 </table>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m7">tests.Tests:testAlerts</h2>
-<p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">tests.Tests:validrateImages</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
